Switch htmls's to new bundles url's.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>$mol_app_todomvc</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link href="-mix/index.env=web.stage=test.css" rel="stylesheet"/>
+		<link href="-/web.css" rel="stylesheet"/>
 		<style>
 			body {
 				height: 100%;
@@ -17,7 +17,7 @@
 		</style>
 	</head>
 	<body>
-		<script src="-mix/index.env=web.stage=test.js" charset="utf-8"></script>
+		<script src="-/web.js" charset="utf-8"></script>
 		<div mol_viewer_root="$mol_app_todomvc"></div>
 		<script>
 			var TASK_COUNT = 100
