--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 				margin: 0;
 				display: flex;
 				font: 18px/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
-				background: #eaeaea;
+				background: #f5f5f5;
 				color: #4d4d4d;
 			}
 		</style>
