Scroller has not minimal height.

--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 
 <style>
 	body {
+		height: 100%;
+		margin : 0;
 		font: 18px/1.2 'Helvetica Neue', Helvetica, Arial, sans-serif;
 		background: #f5f5f5;
 		color: #4d4d4d;
 	}
 </style>
 
-<body mol_viewer_root="$mol_app_todomvc">
+<div mol_viewer_root="$mol_app_todomvc">
 
 <script src="-/web.js" charset="utf-8"></script>
 
