Disable support of old ios api UIWebView.

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
 			var toggleButton = document.querySelector('.toggle:not(:checked),[mol_app_todomvc_allCompleter]:not([mol_checker_checked]),.sapUiRrRow input[type="CheckBox"]:not(:checked)');
 
 			if( toggleButton ) {
-				toggleButton.dispatchEvent( new Event( 'mousedown' , {} ) )
-				toggleButton.dispatchEvent( new Event( 'mouseup' , {} ) )
+				toggleButton.dispatchEvent( new Event( 'click' , {} ) )
 				setImmediate(step,0)
 			} else {
 				done()
@@ -106,8 +105,7 @@
 			var deleteButton = document.querySelector('.destroy,[mol_app_todomvc_taskRow_dropper]');
 
 			if( deleteButton ) {
-				deleteButton.dispatchEvent( new Event( 'mousedown' , {} ) )
-				deleteButton.dispatchEvent( new Event( 'mouseup' , {} ) )
+				deleteButton.dispatchEvent( new Event( 'click' , {} ) )
 				setImmediate(step,0)
 			} else {
 				done()
