Disable webview autozoom in all apps.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html style=" height: 100% ">
 
 <meta charset="utf-8" />
-<meta name="viewport" content="width=device-width" />
+<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 
 <link href="-/web.css" rel="stylesheet"/>
 
