fix: redirect to build dir #360

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 
-<link href="-/web.css" rel="stylesheet"/>
+<link href="web.css" rel="stylesheet"/>
 
 <style>
 	body {
@@ -18,7 +18,7 @@
 
 <div mol_view_root="$mol_app_todomvc">
 
-<script src="-/web.js" charset="utf-8"></script>
+<script src="web.js" charset="utf-8"></script>
 
 <script>
 	addEventListener( 'load' , function() {
