fix: css links removed, test script replaced to link #360

--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 
-<link href="web.css" rel="stylesheet"/>
-
 <style>
 	body {
 		height: 100%;
@@ -23,7 +21,7 @@
 <script>
 	addEventListener( 'load' , function() {
 		var script = document.createElement( 'script' )
-		script.src = '-/web.test.js'
+		script.src = 'web.test.js'
 		document.body.appendChild( script )
 	} )
 </script>
