--- a/index.html
+++ b/index.html
@@ -17,11 +17,4 @@
 <div mol_view_root="$mol_app_todomvc">
 
 <script src="web.js" charset="utf-8"></script>
-
-<script>
-	addEventListener( 'load' , function() {
-		var script = document.createElement( 'script' )
-		script.src = 'web.test.js'
-		document.body.appendChild( script )
-	} )
-</script>
+<script src="web.test.js" defer charset="utf-8"></script>
