fix: todomvc renaming

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	}
 </style>
 
-<div mol_view_root="$mol_app_todomvc">
+<div mol_view_root="$hyoo_todomvc">
 
 <script src="web.js" charset="utf-8"></script>
 <script src="web.test.js" defer charset="utf-8"></script>
