Deployed using Blazing fast GitHub Pages deploy

--- a/test.html
+++ b/test.html
@@ -20,7 +20,7 @@
 
 				<script src="/mol/build/client/client.js" charset="utf-8"></script>
 				<script>
-					setTimeout( ()=> {
+					addEventListener( 'load', ()=> {
 
 						const test = document.createElement( 'script' )
 						test.src = 'web.test.js'
@@ -31,6 +31,6 @@
 						test.onload = ()=> document.head.appendChild( audit )
 						document.head.appendChild( test )
 
-					}, 250 )
+					} )
 				</script>
 				
